adding latest version of the notebook

--- a/may2019_demo/notebooks_hca_demo_scanpy.ipynb
+++ b/may2019_demo/notebooks_hca_demo_scanpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,31 +55,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e338b04aa7ca40f9aedd19bb519857c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='file:///f9e363cd-7fa5-4349-add2-1c9bd86d10c8.loom', description='URL to Matrix Loom: ')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "w = widgets.Text(value=\"file:///f9e363cd-7fa5-4349-add2-1c9bd86d10c8.loom\", description=\"URL to Matrix Loom: \")\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-05-13 15:27:31--  https://s3.amazonaws.com/dcp-matrix-service-results-prod/9d34d050-38af-430c-888b-59be496c01da.loom\n",
-      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.86.197\n",
-      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.86.197|:443... connected.\n",
+      "--2019-05-20 03:10:39--  https://s3.amazonaws.com/dcp-matrix-service-results-prod/3938cf5a-3159-4eb7-aef5-59589795c268.loom\n",
+      "Resolving s3.amazonaws.com (s3.amazonaws.com)... 52.216.232.149\n",
+      "Connecting to s3.amazonaws.com (s3.amazonaws.com)|52.216.232.149|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 55356068 (53M) [binary/octet-stream]\n",
-      "Saving to: ‘9d34d050-38af-430c-888b-59be496c01da.loom.3’\n",
+      "Length: 13114063 (13M) [binary/octet-stream]\n",
+      "Saving to: ‘pancreas.loom’\n",
       "\n",
-      "9d34d050-38af-430c- 100%[===================>]  52.79M  34.6MB/s    in 1.5s    \n",
+      "pancreas.loom       100%[===================>]  12.51M  34.3MB/s    in 0.4s    \n",
       "\n",
-      "2019-05-13 15:27:33 (34.6 MB/s) - ‘9d34d050-38af-430c-888b-59be496c01da.loom.3’ saved [55356068/55356068]\n",
+      "2019-05-20 03:10:40 (34.3 MB/s) - ‘pancreas.loom’ saved [13114063/13114063]\n",
       "\n"
      ]
     }
    ],
    "source": [
     "filename = \"9d34d050-38af-430c-888b-59be496c01da.loom\"\n",
-    "!wget https://s3.amazonaws.com/dcp-matrix-service-results-prod/{filename}\n",
-    "adata = sc.read_loom(filename, sparse=True, cleanup=False, \n",
+    "## !wget https://s3.amazonaws.com/dcp-matrix-service-results-prod/{filename}\n",
+    "if w.value.startswith(\"file:///\"):\n",
+    "    !cp {w.value.replace(\"file:///\", \"\")} pancreas.loom\n",
+    "else:\n",
+    "    !wget {w.value} -O pancreas.loom\n",
+    "adata = sc.read_loom(\"pancreas.loom\", sparse=True, cleanup=False, \n",
     "                     X_name='spliced', obs_names='CellID', var_names='Accession')"
    ]
   },
