Fix typos in login notebook

--- a/tasks/Log In/Log In.ipynb
+++ b/tasks/Log In/Log In.ipynb
@@ -14,7 +14,7 @@
     "### Things fall apart when logging in\n",
     "First, assume the HCA CLI is already installed.\n",
     "\n",
-    "The docs say to log in with `hca dss login`. This never returns if your run it within a notebook:"
+    "The docs say to log in with `hca dss login`. This won't return if you run it in a notebook:"
    ]
   },
   {
@@ -33,12 +33,9 @@
    "source": [
     "Running via a terminal tells you to `Please visit this URL to authorize this application: <url>`\n",
     "\n",
-    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`. That doesn't work within a notebook or in a VM, EC2 instance where you're not running a browser.\n",
+    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`.\n",
     "\n",
-    "There is a workaround:\n",
-    "\n",
-    "1. Go to a computer where `localhost` will the way you want.\n",
-    "2. Install the HCA client as above and run `hca dss login --remote`."
+    "If you're working in a notebook, VM, EC2 instance, or other remote host where you can't access a browser, instead do:"
    ]
   },
   {
