Update Download Any BAM notebook (closes #43)

--- a/tasks/Download BAM/Download Any BAM.ipynb
+++ b/tasks/Download BAM/Download Any BAM.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "source": [
     "____\n",
-    "Now I have an ID that I can work with, though it's an \"fqid\" not a \"uuid\", and it's for a bundle, not a file. I can try providing it to  `get_bundle`... "
+    "Now I have an ID that I can work with, `bundle_fqid`! It's an FQID and not a UUID, and for a bundle, not a file. What happens if I provide the FQID to `get_bundle` as the UUID?"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "source": [
     "****\n",
-    "Hmmm, a `DSSException`; it appears that it couldn't find a bundle with that UUID. I suppose I can strip off the timestamp from the ID. (The UUID is the part of the FQID before the first `.`. The timestamp is everything after.)"
+    "Hmmm, a `DSSException` - it appears that it couldn't find a bundle with that UUID. This makes sense because FQIDs aren't UUIDs: the UUID is the part of the FQID before the first `.`. The timestamp is everything after. So, if I extract the UUID from the FQID, everything should work:"
    ]
   },
   {
@@ -160,69 +160,56 @@
    "metadata": {},
    "source": [
     "****\n",
-    "This is very promising! No BAM files in this bundle, but I see the structure of a \"bundle\" and how I can work with it. Now, I just need to iterate over bundles until I find a BAM "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for result in search_response[\"results\"]:\n",
-    "    bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
-    "    try:\n",
-    "        bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
-    "    except:\n",
-    "        # Sometimes, bundles that are deleted linger in the index.\n",
-    "        # It's no problem - we can just ignore it and move on.\n",
-    "        continue\n",
-    "    found_file = False\n",
-    "    for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
-    "        if file_dict[\"name\"].endswith(\".bam\"):\n",
-    "            print(\"Name: {}, UUID: {}\".format(file_dict[\"name\"], file_dict[\"uuid\"]))\n",
-    "            found_file = True\n",
-    "            break\n",
-    "    if found_file:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What if I look for fastqs?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for result in search_response[\"results\"]:\n",
-    "    bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
-    "    try:\n",
-    "        bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
-    "    except:\n",
-    "        continue\n",
-    "    found_file = False\n",
-    "    for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
-    "        if file_dict[\"name\"].endswith(\".fastq.gz\"):\n",
-    "            print(\"Name: {}, UUID: {}\".format(file_dict[\"name\"], file_dict[\"uuid\"]))\n",
-    "            found_file = True\n",
-    "            break\n",
-    "    if found_file:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "****\n",
+    "Nice! Now I can see the general structure of a bundle.\n",
     "\n",
-    "Don't see any results? That's because search results are paginated, so the `results` list only contains 100 of the ~2000 results. There's another RFC for the reading list there, but there's also the `post_search.iterate` method that should work."
+    "Using this information, what if I want to find a bundle with a BAM? I can write a function `find_bam()` that iterates over bundles until it finds a bundle with a BAM..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_bam():\n",
+    "    for result in search_response[\"results\"]:\n",
+    "        bundle_uuid, _ = results['bundle_fqid'].split('.', maxsplit=1)\n",
+    "        bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
+    "        for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
+    "            if file_dict[\"name\"].endswith(\".bam\"):\n",
+    "                return file_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks good! `find_bam()` will loop over each result in the `post_search` query we made earlier and GET each bundle until it finds a bundle containing a file that ends in `.bam`. One thing to remember is that sometimes, `post_search` can return a bundle that's been deleted but is lingering in the index, and that trying to GET that bundle could result in an error. It's no problem, as long as we can catch and ignore those cases..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_bam():\n",
+    "    for result in search_response[\"results\"]:\n",
+    "        bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
+    "        try:\n",
+    "            bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
+    "        except:\n",
+    "            continue\n",
+    "        for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
+    "            if file_dict[\"name\"].endswith(\".bam\"):\n",
+    "                return file_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One last thing: each `post_search` request is paginated and only returns some 100 results per request. Luckily, there's a method I can use that will automatically and transparently paginate through all results, `post_search.iterate`."
    ]
   },
   {
@@ -240,21 +227,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = client.post_search.iterate(replica=\"aws\", es_query={})\n",
-    "for result in results:\n",
-    "    bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
-    "    try:\n",
-    "        bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
-    "    except:\n",
-    "        continue\n",
-    "    found_file = False\n",
-    "    for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
-    "        if file_dict[\"name\"].endswith(\".bam\"):\n",
-    "            print(\"Name: {}, UUID: {}\".format(file_dict[\"name\"], file_dict[\"uuid\"]))\n",
-    "            found_file = True\n",
-    "            break\n",
-    "    if found_file:\n",
-    "        break"
+    "I can update my function `find_bam` to use it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_bam():\n",
+    "    result = client.post_search.iterate(replica=\"aws\", es_query={})\n",
+    "    for result in results:\n",
+    "        bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
+    "        try:\n",
+    "            bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
+    "        except:\n",
+    "            continue\n",
+    "        for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
+    "            if file_dict[\"name\"].endswith(\".bam\"):\n",
+    "                return file_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_bam()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks good! What if I want to look for another file type, like fastqs? I can generalize that code above..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_ext(extension):\n",
+    "    result = client.post_search.iterate(replica=\"aws\", es_query={})\n",
+    "    for result in results:\n",
+    "        bundle_uuid = result[\"bundle_fqid\"].split('.', maxsplit=1)[0]\n",
+    "        try:\n",
+    "            bundle_dict = client.get_bundle(uuid=bundle_uuid, replica=\"aws\")\n",
+    "        except:\n",
+    "            continue\n",
+    "        for file_dict in bundle_dict[\"bundle\"][\"files\"]:\n",
+    "            if file_dict[\"name\"].endswith(extension):\n",
+    "                return file_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fastq_file = find_ext('.fastq.gz')\n",
+    "print(f\"Name: {fastq_file['name']}, UUID: {fastq_file['uuid']}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I want to download a file and know its UUID, I can use the `get_file` method..."
    ]
   },
   {
