--- a/tasks/Log In/Log In.ipynb
+++ b/tasks/Log In/Log In.ipynb
@@ -14,22 +14,14 @@
     "### Things fall apart when logging in\n",
     "First, assume the HCA CLI is already installed.\n",
     "\n",
-    "The docs say to log in with `hca dss login`. This never returns if your run it within a notebook:"
+    "The docs say to log in with `hca dss login`. This won't return if you run it in a notebook:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process is interrupted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "hca dss login"
@@ -41,32 +33,19 @@
    "source": [
     "Running via a terminal tells you to `Please visit this URL to authorize this application: <url>`\n",
     "\n",
-    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`. That doesn't work within a notebook or in a VM, EC2 instance where you're not running a browser.\n",
+    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`.\n",
     "\n",
-    "There is a workaround:\n",
-    "\n",
-    "1. Go to a computer where `localhost` will the way you want.\n",
-    "2. Install the HCA client as above and run `hca login dss`.\n",
-    "3. Go to `~/.config/hca/config.json` and find the string in `application_secrets.client_secrets`.\n",
-    "5. In the notebook environment, run `hca login dss --access-token <token>`, where `<token>` is the string you found in the json file above."
+    "If you're working in a notebook, VM, EC2 instance, or other remote host where you can't access a browser, instead do:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Storing access credentials\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "hca dss login --access-token <copied_access_token>"
+    "hca dss login --remote"
    ]
   }
  ],
@@ -86,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
