--- a/may2019_demo/notebooks_hca_demo_scanpy.ipynb
+++ b/may2019_demo/notebooks_hca_demo_scanpy.ipynb
@@ -10,23 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/matplotlib/__init__.py:886: MatplotlibDeprecationWarning: \n",
-      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
-      "  \"found relative to the 'datapath' directory.\".format(key))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scanpy==1.4.2 anndata==0.6.19 umap==0.3.8 numpy==1.15.2 scipy==1.0.0 pandas==0.23.4 scikit-learn==0.20.0 statsmodels==0.9.0 python-igraph==0.7.1 louvain==0.6.1 \n"
+      "scanpy==1.4.4.post1 anndata==0.6.22.post1 umap==0.3.9 numpy==1.17.0 scipy==1.3.0 pandas==0.25.0 scikit-learn==0.21.3 statsmodels==0.10.1 python-igraph==0.7.1 louvain==0.6.1\n",
+      "The results file is here: /var/folders/_g/1t0cn21x54z4gw4zm65qrxg00000gn/T/tmphdzkrsuh.h5ad\n"
      ]
     }
    ],
@@ -42,7 +34,12 @@
     "sc.settings.verbosity = 3  # verbosity: errors (0), warnings (1), info (2), hints (3)\n",
     "sc.settings.set_figure_params(dpi=80, color_map='Greys')\n",
     "sc.logging.print_versions()\n",
-    "results_file = './write/pancreas.h5ad'"
+    "\n",
+    "\n",
+    "# Let's write results to a temporary file\n",
+    "import tempfile\n",
+    "results_file = tempfile.NamedTemporaryFile(delete=False, suffix='.h5ad').name\n",
+    "print(\"The results file is here: \" + results_file)"
    ]
   },
   {
@@ -603,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
