remove bash magic from login notebook

--- a/login/login.ipynb
+++ b/login/login.ipynb
@@ -4,48 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Login to the DSS 🔶"
+    "# Login to the DSS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Things fall apart when logging in\n",
-    "First, assume the HCA CLI is already installed.\n",
+    "## Interactively\n",
     "\n",
-    "The docs say to log in with `hca dss login`. This won't return if you run it in a notebook:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "hca dss login"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "One of the first things you will need to do to use the Human Cell Atlas command line interface (CLI) is to log in with your Human Cell Atlas account.\n",
+    "\n",
+    "Running the following command in a terminal will open a browser, and will direct you to an Auth0 URL that will ask you to authenticate yourself using one of atuhentication providers.\n",
+    "\n",
+    "To do this, run the following command at the command line:\n",
+    "\n",
+    "```\n",
+    "hca dss login\n",
+    "```\n",
+    "\n",
     "Running via a terminal tells you to `Please visit this URL to authorize this application: <url>`\n",
     "\n",
-    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`.\n",
-    "\n",
-    "If you're working in a notebook, VM, EC2 instance, or other remote host where you can't access a browser, instead do:"
+    "That URL directs you to a Google sign-in page, which then redirects to to `localhost:8080`."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "## Remotely\n",
+    "\n",
+    "If you're working in a notebook, VM, EC2 instance, or other remote host where you can't access a browser, you can run the following command instead:\n",
+    "\n",
+    "```\n",
+    "hca dss login --remote\n",
+    "```\n",
+    "\n",
+    "If you are running a Jupyter notebook, enter the following into a cell to run the command using bash magic:\n",
+    "\n",
+    "```\n",
     "%%bash\n",
-    "hca dss login --remote"
+    "hca dss login --remote\n",
+    "```"
    ]
   }
  ],
@@ -65,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
