--- a/install-hca/install-hca.ipynb
+++ b/install-hca/install-hca.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the HCA CLI ❎"
+    "## Install the HCA CLI"
    ]
   },
   {
