update titles of scanpy examples to include date/version

--- a/explore-hca-dataset-scanpy-nov-2018/explore-hca-dataset-scanpy-nov-2018.ipynb
+++ b/explore-hca-dataset-scanpy-nov-2018/explore-hca-dataset-scanpy-nov-2018.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore an HCA data set in Scanpy\n",
+    "# Explore an HCA data set in Scanpy (November 2018 version)\n",
     "This notebook shows a few quick steps to start exploring an example HCA data sets using [scanpy](https://github.com/theislab/scanpy) ([citation](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-017-1382-0))."
    ]
   },
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The quick way to plot in tSNE space"
+    "### The quick way to plot in tSNE space"
    ]
   },
   {
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A slightly prettier custom plot"
+    "### A slightly prettier custom plot"
    ]
   },
   {
