--- a/explore-hca-dataset-scanpy-may-2019/explore-hca-dataset-scanpy-may-2019.ipynb
+++ b/explore-hca-dataset-scanpy-may-2019/explore-hca-dataset-scanpy-may-2019.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore an HCA data set in Scanpy\n",
+    "# Explore an HCA data set in Scanpy (May 2019 version)\n",
     "This notebook shows a few quick steps to start exploring an example HCA data sets using [scanpy](https://github.com/theislab/scanpy) ([citation](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-017-1382-0))."
    ]
   },
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The quick way to plot in tSNE space"
+    "### The quick way to plot in tSNE space"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A slightly prettier custom plot"
+    "### A slightly prettier custom plot"
    ]
   },
   {
