--- a/elasticsearch-queries/elasticsearch-queries.ipynb
+++ b/elasticsearch-queries/elasticsearch-queries.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post_search found 2347 results\n",
+      "post_search found 2350 results\n",
       "post_search returned 100 results\n"
      ]
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2347\n"
+      "2350\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1060,14 +1060,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Match Queries for Single-Condition Checks\n",
+    "## Match Queries for Single-Condition Checks\n",
     "\n",
     "The organ query we just ran has only a single condition to match, so we can specify a `match` query instead of a `bool` query to make the query just a little simpler:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## File-based Queries\n",
+    "## Wildcard and Regular Expression Queries\n",
+    "\n",
+    "When running queries where the exact content of fields is unknown or partially known (for example, if searching for data related to the small or large intestines, or searching for filenames with a given extension). For these situations, we can use `wildcard` or `regexp` queries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc_query = {\n",
+    "    \"query\": {\n",
+    "        \"wildcard\": {\n",
+    "            \"manifest.files.name\": {\n",
+    "                \"value\": \"*.fastq.gz\"\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re_query = {\n",
+    "    \"query\": {\n",
+    "        \"regexp\": {\n",
+    "            \"files.biomaterial_json.biomaterials.content.target_cell_type.text\": {\n",
+    "                \"value\": \".*T\\\\ cell\" # Gives us any type of T cell\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wildcard or RegEx?\n",
+    "\n",
+    "Wildcard conditions are appropriate when all you need is to specify text and wildcards (e.g., \"search for files that end in .fastq.gz\").\n",
+    "\n",
+    "A regular expression can be more surgical and exact, and is better when you have a more specific request (e.g., \"search for bundles containing .fastq.gz files whose names consist only of digits\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filename Queries\n",
     "\n",
     "Being able to search the DSS for particular file types is important. For example, it can help to find gene expression matrices, Fastq files, and other useful data. We cover the use of the manifest metadata to add query conditions based on filenames."
    ]
@@ -1183,12 +1237,12 @@
    "source": [
     "### Exact Filename Matches\n",
     "\n",
-    "To search for files, we can search a bundle's manifest (the part of the metadata that stores a list of files contained in the bundle) for filenames matching a mattern. We start with a simple match query that will look for exact filename matches:"
+    "To search for exact filenames, we can use a `match` query that looks at each bundle's manifest (the part of the metadata that stores a list of files contained in the bundle) for filenames matching a mattern:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,14 +1257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post_search() found 104 results\n",
+      "post_search() found 106 results\n",
       "post_search() returned 10 results\n"
      ]
     }
@@ -1237,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,14 +1308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post_search() found 2067 results\n",
+      "post_search() found 2070 results\n",
       "post_search() returned 10 results\n"
      ]
     }
@@ -1279,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,14 +1492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post_search() found 361 results\n",
+      "post_search() found 362 results\n",
       "post_search() returned 10 results\n"
      ]
     }
@@ -1463,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1504,20 +1558,6 @@
    "source": [
     "print_query_hits(term_organ_query)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
